# advent-of-code

./: bench.sh
2015/rust/: Cargo.toml
2015/zig/: 1.zig
2024/python/: 1-1.py  1-2.py  2-1.py  2-2.py  3-1.py  3-2.py  4-1.py  4-2.py
