[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
lto = true
strip = true
debug = false
codegen-units = 1
incremental = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
opt-level = 3
